==> 3s1d/fanet-stm32/Src/fanet/radio/fmac.cpp <==
#include <stdlib.h>
#include <math.h>
#include "stm32l4xx.h"
#include "stm32l4xx_hal.h"
#include "spi.h"
#include "../lib/random.h"
#include "../radio/sx1272.h"
#include "../radio/fmac.h"

void FanetMac::frame_received(int length)
{
	/* quickly read registers */
	num_received = sx1272_getFrame(rx_frame, sizeof(rx_frame));
	int rssi = sx1272_getRssi();

#if defined(SerialDEBUG) && MAC_debug_mode > 0
	SerialDEBUG.print(F("### Mac Rx: "));
	SerialDEBUG.print(num_received, DEC);
	SerialDEBUG.print(F(" @ "));
	SerialDEBUG.print(rssi);
	SerialDEBUG.print(F(" "));

	for(int i=0; i<num_received; i++)
	{
		SerialDEBUG.print(rx_frame[i], HEX);
		if(i<num_received-1)
		SerialDEBUG.print(":");
	}
	SerialDEBUG.println();
#endif

	/* build frame from stream */
	Frame *frm = new Frame(num_received, rx_frame);
	frm->rssi = rssi;

	/* add to fifo */
	if (rx_fifo.add(frm) < 0)
		delete frm;
}

bool FanetMac::begin(Fapp &app)
{
	myApp = &app;

	/* configure phy radio */
	if (sx1272_init(HAL_SPI_get()) == false)
		return false;
	sx1272_setBandwidth(BW_250);
	sx1272_setSpreadingFactor(SF_7);
	sx1272_setCodingRate(CR_5);
	sx1272_setExplicitHeader(true);
	sx1272_setSyncWord(MAC_SYNCWORD);
	sx1272_setPayloadCrc(true);
	sx1272_setLnaGain(LNAGAIN_G1_MAX, true);
	sx1272_setIrqReceiver(frame_rx_wrapper);

	/* region specific. default is EU */
	sx_region_t region;
	region.channel = CH_868_200;
	region.dBm = 10;			//+4dB antenna gain (skytraxx/lynx) -> max allowed output (14dBm)
	sx1272_setRegion(region);

	/* enter sleep mode */
	sx1272_setArmed(false);

	/* address */
	_my_addr = read_addr();

	/* start state machine */
	my_timer.Start();

	/* start random machine */
	randomSeed(HAL_GetUIDw0() + HAL_GetUIDw1() + HAL_GetUIDw2());

	return true;
}

void FanetMac::handle_tx()
{
	/* still in backoff */
	if (HAL_GetTick() < csma_next_tx)
		return;

	/* find next send-able packet */
	/* this breaks the layering. however, this approach is much more efficient as the app layer now has a much higher priority */
	Frame* frm;
	bool app_tx = false;
	if (myApp->is_broadcast_ready(neighbors.size()))
//todo: check if first element of txfifo is not an ACK!
	{
		/* the app wants to broadcast the glider state */
		frm = myApp->get_frame();
		if (frm == NULL)
			return;

//todo?? set forward bit only if no inet base station is available, this MAY break the layers
		if (neighbors.size() <= MAC_MAXNEIGHBORS_4_TRACKING_2HOP)
			frm->forward = true;
		else
			frm->forward = false;

		app_tx = true;
	}
	else if(sx1272_get_airlimit() < 0.9f)
	{
#if MAC_debug_mode >= 2
		static int queue_length = 0;
		int current_qlen = tx_fifo.size();
		if(current_qlen != queue_length)
		{
			printf("### tx queue: %d\n", current_qlen);
			queue_length = current_qlen;
		}
#endif

		/* get a frame from the fifo */
		frm = tx_fifo.get_nexttx();
		if (frm == NULL)
			return;

		/* frame w/o a received ack and no more re-transmissions left */
		if (frm->ack_requested && frm->num_tx <= 0)
		{
#if MAC_debug_mode > 0
			printf("### Frame, 0x%02X NACK!\n", frm->type);
#endif
			if (myApp != NULL)
				myApp->handle_acked(false, frm->dest);
			tx_fifo.remove_delete(frm);
			return;
		}

		/* unicast frame w/o forwarding and it is not a direct neighbor */
		if (frm->forward == false && frm->dest != MacAddr() && isNeighbor(frm->dest) == false)
			frm->forward = true;

		app_tx = false;
	}
	else
	{
		return;
	}

	/* serialize frame */
	uint8_t* buffer;
	int blength = frm->serialize(buffer);
	if (blength < 0)
	{
#if MAC_debug_mode > 0
		printf("### Problem serialization type 0x%02X. removing.\n", frm->type);
#endif
		/* problem while assembling the frame */
		if (app_tx)
			delete frm;
		else
			tx_fifo.remove_delete(frm);
		return;
	}

#if MAC_debug_mode > 0
	printf("### Sending, 0x%02X... ", frm->type);
#endif

#if MAC_debug_mode >= 4
	/* print hole packet */
	printf(" ");
	for(int i=0; i<blength; i++)
	{
		printf("%02X", buffer[i]);
		if(i<blength-1)
			printf(":");
	}
	printf(" ");
#endif

	/* channel free and transmit? */
	//note: for only a few nodes around, increase the coding rate to ensure a more robust transmission
	int tx_ret = sx1272_sendFrame(buffer, blength, neighbors.size() < MAC_CODING48_THRESHOLD ? CR_8 : CR_5);
	delete[] buffer;

	if (tx_ret == TX_OK)
	{
#if MAC_debug_mode > 0
		printf("done.\n");
#endif

		if (app_tx)
		{
			/* app tx */
			myApp->broadcast_successful(frm->type);
			delete frm;
		}
		else
		{
			/* fifo tx */

			/* transmission successful */
			if (!frm->ack_requested)
			{
				/* remove frame from FIFO */
				tx_fifo.remove_delete(frm);
			}
			else
			{
				/* update next transmission */
				if (--frm->num_tx > 0)
					frm->next_tx = HAL_GetTick() + (MAC_TX_RETRANSMISSION_TIME * (MAC_TX_RETRANSMISSION_RETRYS - frm->num_tx));
				else
					frm->next_tx = HAL_GetTick() + MAC_TX_ACKTIMEOUT;
			}
		}

		/* ready for a new transmission in */
		csma_backoff_exp = MAC_TX_BACKOFF_EXP_MIN;
		csma_next_tx = HAL_GetTick() + MAC_TX_MINPREAMBLEHEADERTIME_MS + (blength * MAC_TX_TIMEPERBYTE_MS);
	}
	else if (tx_ret == TX_RX_ONGOING || tx_ret == TX_TX_ONGOING)
	{
#if MAC_debug_mode > 0
		if(tx_ret == TX_RX_ONGOING)
			printf("rx, abort.\n");
		else
			printf("tx not done yet, abort.\n");
#endif

		if (app_tx)
			delete frm;

		/* channel busy, increment backoff exp */
		if (csma_backoff_exp < MAC_TX_BACKOFF_EXP_MAX)
			csma_backoff_exp++;

		/* next tx try */
		csma_next_tx = HAL_GetTick() + random(1 << (MAC_TX_BACKOFF_EXP_MIN - 1), 1 << csma_backoff_exp);

#if MAC_debug_mode > 1
		printf("### backoff %lums\n", csma_next_tx - HAL_GetTick());
#endif
	}
	else
	{
		/* ignoring TX_TX_ONGOING */
#if MAC_debug_mode > 2
		printf("## WAT: %d\n", tx_ret);
#endif

		if (app_tx)
			delete frm;
	}
}
