==> PhilColbert/AirWhere-esp32/main/fanet_stack/fmac.cpp <==
#include <math.h>
#include "../fanet_stack/fmac.h"
#include "../fanet_stack/sx1272.h"
#include "../fanet_stack/sx1276.h"
#define SX1276_CORRECTION -20000
#include "..\ogn\freqplan.h"
#include "..\ogn\ogn.h"
#define SX_REG_BACKUP_FSK	0
#define SX_REG_BACKUP_LORA	1

void FanetMac::frame_received(int length)
{
//	Serial.print("Received packet '");

	// read packet =0
	int rssi =0;
//	for (int i = 0; i < length; i++)packetMsg[i] = sx1276.read();
//	rssi = sx1276.packetRssi();

//	for (int i = 0; i < length; i++) Serial.print(packetMsg[i],HEX);
	// print RSSI of packet
//	Serial.print(" with RSSI ");
//	Serial.println(sx1276.packetRssi());

	/* quickly read registers */
	// read packet
	/*sx1276 support*/
		//int rssi;
		if (lora_or_flarm == 'r'  )
		{

			num_received = length;
			for (int i = 0; i < length; i++)rx_frame[i] = sx1276.read();
			rssi = sx1276.packetRssi();
		}
		if (lora_or_flarm == 'h'  || lora_or_flarm=='t' || lora_or_flarm=='b' )
		{
			num_received = length;
			for (int i = 0; i < length; i++)rx_frame[i] = sx1276.read();
			rssi = sx1276.packetRssi();
			if (debug_level>10)
			{
		     	for (int i = 0; i < length; i++) Serial.print(rx_frame[i],HEX);
			}
			// print RSSI of packet
		//	Serial.print(" with RSSI ");
		//	Serial.println(sx1276.packetRssi());

		}
		if (lora_or_flarm == 'l')
		{
			num_received = sx1272.getFrame(rx_frame, sizeof(rx_frame));
			rssi = sx1272.getRssi();
		}

#if defined(SerialDEBUG) && MAC_debug_mode > 0
	SerialDEBUG.print(millis());
	SerialDEBUG.print(F("### Mac Rx: "));
	SerialDEBUG.print(num_received, DEC);
	SerialDEBUG.print(F(" @ "));
	SerialDEBUG.print(rssi);
	SerialDEBUG.print(F(" "));

	for(int i=0; i<num_received; i++)
	{
		SerialDEBUG.print(rx_frame[i], HEX);
		if(i<num_received-1)
			SerialDEBUG.print(":");
	}
	SerialDEBUG.println();
#endif


	/* build frame from stream */
	Frame *frm = new Frame(num_received, rx_frame);
	frm->rssi = rssi;

	/* add to fifo */
	if(rx_fifo.add(frm) < 0)
		delete frm;

	return;
}

bool FanetMac::begin(Fapp &app)
{
	myApp = &app;

	/* configure phy radio */

	if (debug_level>0)
	{
		Serial.println("radio starting");
	}

	if (lora_or_flarm == 'r')
	{
			

		sx1276.setPins(SX1276_SS, SX1276_RST, SX1276_DI0);
		pinMode(SX1276_DI0, INPUT);

		//radio initialisation

		if (loraFrequency=='9')
		{
			if (sx1276.begin(SX1276_CH_915_040) == false)
			{
				return false;
			}
		}
		else
		{
			if (sx1276.begin(SX1276_CH_868_200) == false)
		    {
			  return false;
		    }
		}
		sx1276.setPreambleLength(5);
		sx1276.setSignalBandwidth(250E3);
		sx1276.setSpreadingFactor(7);
		sx1276.setTimeout(5);
		sx1276.setCodingRate4(5);
		sx1276.enableCrc();

		sx1276.setSyncWord(MAC_SYNCWORD);

		// register the receive callback
		sx1276.onReceive(frame_rx_wrapper);

		// put the radio into receive mode
		sx1276.receive(0); //explicit header
	}

	if (lora_or_flarm == 'l')
	{

		if (sx1272.begin() == false)
			return false;
		sx1272.setBandwidth(BW_250);
		sx1272.setSpreadingFactor(SF_7);
		sx1272.setCodingRate(CR_5);
		//v1.1
		sx1272.sx1272_setSyncWord(MAC_SYNCWORD);
		sx1272.setExplicitHeader(true);
		sx1272.setPayloadCrc(true);
		sx1272.setPower(14);
		sx1272.sx1272_setLnaGain(LNAGAIN_G1_MAX, true);

		//sx1276 support

		if (loraFrequency=='9')
		{
			sx1272.setChannel(CH_915_040);
		}
		else
		{
			sx1272.setChannel(CH_868_200);
		}
		sx1272.setIrqReceiver(frame_rx_wrapper);
	}

	if (lora_or_flarm == 'h'  || lora_or_flarm=='t' || lora_or_flarm=='b')
	{

		sx1276.setPins(LORA_DEFAULT_SS_PIN,LORA_DEFAULT_RESET_PIN,LORA_DEFAULT_DIO0_PIN);
	//#define RF_FREQUENCY 916040000 // Hz
//#define RF_FREQUENCY   868200000 // Hz
//		if (sx1276.begin(SX1276_CH_868_200) == 0) {
	//		return false;
	//	}

		if (debug_level>0)
		{
			if (lora_or_flarm == 'h')
			{
			  Serial.println("heltec board starting");
			}
			if (lora_or_flarm == 't')
			{
				Serial.println("TTGO board starting");
			}
			if (lora_or_flarm == 'b')
			{
				Serial.println("TTGO T-beam board starting");
			}
		}

		if (loraFrequency=='9')
		{
			if (sx1276.begin(SX1276_CH_915_040) == false)
			{
				return false;
			}
		}
		else
		{
			if (sx1276.begin(SX1276_CH_868_200) == false)
		    {
			  return false;
		    }
		}


		//radio initialisation

	    pinMode(SX1276_DI0, INPUT);

	//	sx1276.setFrequency(RF_FREQUENCY);
		sx1276.setPreambleLength(5);
		sx1276.setSignalBandwidth(250E3);
		sx1276.setSpreadingFactor(7);
		sx1276.setTimeout(5);
		sx1276.setCodingRate4(5);
		sx1276.enableCrc();

     	sx1276.setSyncWord(MAC_SYNCWORD);

		// register the receive callback
		sx1276.onReceive(frame_rx_wrapper);

		// put the radio into receive mode
		sx1276.receive(0); //explicit header}


	}




	/* start state machine */
	my_timer.Start();

	/* start random machine */
#if defined(ARDUINO_SAMD_ZERO) || defined(ARDUINO_SAMD_VARIANT_COMPLIANCE)
	/* use the device ID */
	volatile uint32_t *ptr1 = (volatile uint32_t *)0x0080A00C;
	volatile uint32_t *ptr2 = (volatile uint32_t *)0x0080A040;
	volatile uint32_t *ptr3 = (volatile uint32_t *)0x0080A044;
	volatile uint32_t *ptr4 = (volatile uint32_t *)0x0080A048;
	randomSeed(millis() + *ptr1 + *ptr2 + *ptr3 + *ptr4);
#else
	randomSeed(millis());
#endif

	return true;
}

void FanetMac::handle_tx()
{
	/* still in backoff */
	if(millis() < csma_next_tx)
		return;

	// check if time for ogn packet. - only do this for sx1276 boards at the moment, good luck on writing the sx1272 code phil.....

	if(myApp->is_ogn_broadcast_ready(neighbors.size()) && ogn_on=='y' && ( lora_or_flarm=='h' || lora_or_flarm=='r'  || lora_or_flarm=='t' || lora_or_flarm=='b'))
	{
		Serial.print("Starting OGN");Serial.println(millis());
		ogn_tx_packets++;
		OGN_TxPacket PosPacket;

     	uint8_t ChipVersion = StartRFchipFSK();


		if( ChipVersion!=0x12 )
		{
			Serial.print("ERROR - Starting FSK Failed - Please check");

		}
		else
		{
			if (debug_level>0)
			{
				Serial.println("Switch to OGN successful");
			}
		}


	//	printf("Starting encode of ");
	//	Serial.println(AcftID.Address);
//		Serial.println(millis());

		PosPacket.Packet.HeaderWord=0;
		PosPacket.Packet.Header.Address    = AcftID.Address;         // set address
		PosPacket.Packet.Header.AddrType   = AcftID.AddrType;        // address-type
		PosPacket.Packet.calcAddrParity();                               // parity of (part of) the header

		//printf("encoding\n");

		//PosPacket.Packet.Position.Time=1;
	//	int32_t Latitude = (int16_t)53*60 + 41;
	//	Latitude = Latitude*(int32_t)10000 + 9703;
	//	PosPacket.Packet.EncodeLatitude(Latitude);
	//	int32_t Longitude = -1*((int32_t)2*600000 + (int32_t)15*10000 + (int32_t)7208);
	//PosPacket.Packet.EncodeLatitude(Latitude);
	//

		PosPacket.Packet.Position.Time=1;

		int32_t Latitude = (int16_t)myApp->get_lat_deg()*60 + myApp->get_lat_min();
		Latitude = Latitude*(int32_t)10000 + myApp->get_lat_min_frac();

		if (myApp->get_lat_sign_negative()) Latitude=Latitude*-1;

		PosPacket.Packet.EncodeLatitude(Latitude);

		int32_t Longitude = ((int32_t)myApp->get_lon_deg()*600000 + (int32_t)myApp->get_lon_min()*10000 + (int32_t)myApp->get_lon_min_frac());
		if (myApp->get_lon_sign_negative()) Longitude=Longitude*-1;
		PosPacket.Packet.EncodeLongitude(Longitude);

		PosPacket.Packet.EncodeSpeed(myApp->get_speed());
		PosPacket.Packet.EncodeHeading(myApp->get_heading());
		PosPacket.Packet.EncodeClimbRate(myApp->get_climb());
		PosPacket.Packet.EncodeTurnRate(myApp->get_turnrate());
		PosPacket.Packet.EncodeAltitude(myApp->get_altitude());
		// encode position/altitude/speed/etc. from GPS position
		PosPacket.Packet.Position.Stealth  = AcftID.Stealth;
		PosPacket.Packet.Position.AcftType = AcftID.AcftType;        // aircraft-type
		//printf("Starting TxPacket\n");
		PosPacket.Packet.Whiten();
		PosPacket.calcFEC();

		const uint8_t *TxPktData0=0;
		TxPktData0=PosPacket.Byte();

		uint8_t TxChan = 0;
		//sx1276.Transmit(TxChan, TxPktData0, RX_AverRSSI, 8);
		//delay(500);

		Serial.println("Switch to lora");
		//sx1276.sx_writeRegister_burst(REG_BITRATEMSB, sx_reg_backup[SX_REG_BACKUP_LORA], sizeof(sx_reg_backup[SX_REG_BACKUP_LORA]));

	//	switch_lora();

		sx1276.receive(0);
		myApp->ogn_broadcast_successful();
		// for some reason theres a stray packet that appears, or the irq flags get messed up,  just clear down.
		sx1276.ClearIrqFlags();
		receiveIRQ=false;
		Serial.print("end");Serial.println(millis());
		return;
	}

	/* find next send-able packet */
	/* this breaks the layering. however, this approach is much more efficient as the app layer now has a much higher priority */
	Frame* frm;
	bool app_tx = false;
	if(myApp->is_broadcast_ready(neighbors.size()))
//todo: check if first element of txfifo is not an ACK!
	{

#if defined(SerialDEBUG) && MAC_debug_mode > 0
	//		SerialDEBUG.print(millis());
	//		SerialDEBUG.print(F("### broadcast is ready"));

#endif
		/* the app wants to broadcast the glider state */
		frm = myApp->get_frame();
		if(frm == NULL)
			return;

//todo?? set forward bit only if no inet base station is available, this MAY break the layers
		if(neighbors.size() <= MAC_MAXNEIGHBORS_4_TRACKING_2HOP)
			frm->forward = true;
		else
			frm->forward = false;

		app_tx = true;
	}
	else
	{
#if defined(SerialDEBUG) && MAC_debug_mode > 0
		//	SerialDEBUG.print(millis());
			//SerialDEBUG.print(F("### getting frame from fifo"));

#endif
		/* get a from from the fifo */
		frm = tx_fifo.get_nexttx();
		if(frm == NULL)
			return;

		/* frame w/o a received ack and no more re-transmissions left */
		if(frm->ack_requested && frm->num_tx <= 0)
		{
#if defined(SerialDEBUG) && MAC_debug_mode > 0
			SerialDEBUG.print(millis());
			SerialDEBUG.print(F("### Frame, 0x"));
			SerialDEBUG.print(frm->type, HEX);
			SerialDEBUG.println(F(" NACK!"));
#endif
			if(myApp != NULL)
				myApp->handle_acked(false, frm->dest);
			tx_fifo.remove_delete(frm);
			return;
		}

		/* unicast frame w/o forwarding and it is not a direct neighbor */
		if(frm->forward == false && frm->dest != MacAddr() && isNeighbor(frm->dest) == false)
			frm->forward = true;

		app_tx = false;
	}

	/* serialize frame */
	uint8_t* buffer;
	int blength = frm->serialize(buffer);
	if(blength < 0)
	{
#if defined(SerialDEBUG) && MAC_debug_mode > 0
		SerialDEBUG.print(millis());
		SerialDEBUG.print(F("### Problem serialization. removing. :- error code "));
		SerialDEBUG.println(blength);
#endif
		/* problem while assembling the frame */
		if(app_tx)
			delete frm;
		else
			tx_fifo.remove_delete(frm);
		return;
	}


#if defined(SerialDEBUG) && MAC_debug_mode > 0
	SerialDEBUG.print(millis());
	SerialDEBUG.print(F("### Sending, 0x"));
	SerialDEBUG.print(frm->type, HEX);
	SerialDEBUG.print(F("..."));
#endif

#if defined(SerialDEBUG) && MAC_debug_mode > 1
	/* print whole packet */
	SerialDEBUG.print(F(" "));
	for(int i=0; i<blength; i++)
	{
		SerialDEBUG.print(buffer[i], HEX);
		if(i<blength-1)
			SerialDEBUG.print(F(":"));
	}
	SerialDEBUG.print(F(" "));
#endif

	/* for only a few nodes around, increase the coding rate to ensure a more robust transmission - Added =0 */
	int tx_ret=0;
	serial_tx_packets_counter++;

	if (lora_or_flarm == 'r')
	{
		if (neighbors.size() < MAC_CODING48_THRESHOLD)
			sx1276.setCodingRate4(8);
		else
			sx1276.setCodingRate4(5);

		/* channel free and transmit? */
		tx_ret = sx1276.sendFrame(buffer, blength);
		delete[] buffer;
	}
	if (lora_or_flarm == 'h'  || lora_or_flarm=='t' || lora_or_flarm=='b')
	{

		if (neighbors.size() < MAC_CODING48_THRESHOLD)
			sx1276.setCodingRate4(8);
		else
			sx1276.setCodingRate4(5);

		/* channel free and transmit? */
	    tx_ret = sx1276.sendFrame(buffer, blength);
		delete[] buffer;
	}
	if (lora_or_flarm == 'l')
	{
		if (neighbors.size() < MAC_CODING48_THRESHOLD)
			sx1272.setCodingRate(CR_8);
		else
			sx1272.setCodingRate(CR_5);

		/* channel free and transmit? */
		tx_ret = sx1272.sendFrame(buffer, blength);
		delete[] buffer;
	}


	if(tx_ret == TX_OK)
	{
#if defined(SerialDEBUG) && MAC_debug_mode > 0
		SerialDEBUG.println(F("Fmac done."));
#endif

		if(app_tx)
		{
			/* app tx */
			myApp->broadcast_successful(frm->type);
			delete frm;
		}
		else
		{
			/* fifo tx */

			/* transmission successful */
			if(!frm->ack_requested)
			{
				/* remove frame from FIFO */
				tx_fifo.remove_delete(frm);
			}
			else
			{
				/* update next transmission */
				if(--frm->num_tx > 0)
					frm->next_tx = millis() + (MAC_TX_RETRANSMISSION_TIME * (MAC_TX_RETRANSMISSION_RETRYS - frm->num_tx));
				else
					frm->next_tx = millis() + MAC_TX_ACKTIMEOUT;
			}
		}

		/* ready for a new transmission */
		csma_backoff_exp = MAC_TX_BACKOFF_EXP_MIN;
		csma_next_tx = millis() + MAC_TX_MINTIME;
	}
	else if(tx_ret == TX_RX_ONGOING)
	{
#if defined(SerialDEBUG) && MAC_debug_mode > 0
		SerialDEBUG.print(millis());
		SerialDEBUG.println(F("rx, abort."));
#endif

		if(app_tx)
			delete frm;

		/* channel busy, increment backoff exp */
		if(csma_backoff_exp < MAC_TX_BACKOFF_EXP_MAX)
			csma_backoff_exp++;

		/* next tx try */
		csma_next_tx = millis() + random(1<<(MAC_TX_BACKOFF_EXP_MIN-1), 1<<csma_backoff_exp);

#if defined(SerialDEBUG) && MAC_debug_mode > 0
		SerialDEBUG.print(millis());
		SerialDEBUG.print(F("### backoff ("));
		SerialDEBUG.print(csma_next_tx - millis());
		SerialDEBUG.println(F("ms)"));
#endif
	}
	else
	{
		/* ignoring TX_TX_ONGOING */
#if defined(SerialDEBUG) && MAC_debug_mode > 0
		SerialDEBUG.print(millis());
		SerialDEBUG.println(F("### wow."));
#endif

		if(app_tx)
		{
#if defined(SerialDEBUG) && MAC_debug_mode > 0
		SerialDEBUG.print(millis());
		SerialDEBUG.println(F("### Fmac deleting tranmitted Frame."));
#endif
			delete frm;
		}
	}
}
